<resources>
    <string name="cant_find_help_text">There is no help for this topic.</string>
    <string name="DashboardActivity"><![CDATA[<p><b>UltraGrav2 Help</b><br>
        Select an observation procedure or other option by tapping one of the buttons on the main 
        screen.</p>
        <p><b>Single Observation</b>: Performs a single observation at a site. See below for Single Mode 
        help.</p>
        <p><b>Continuous Observation</b>: Performs observations with filtering continuously for earth tide 
        observations. See below for Continuous Mode help.</p>
        <p><b>Settings</b>: Consists of the following tabs - System, Meter and Level parameters, and Stations. 
        See each screen for it\'s respective help.</p>
        <p><b>Setup</b>: Consists of the following tabs - Read Meter/Set Duty Cycle, Set Stops/Reading Line, 
        Calculate Beam Scale. See each screen for it\'s respective help.</p>
        <p><b>Options</b>: Consists of the following tabs - Output Observation data, View Observation data, 
        Earth tide. See each screen for it\'s respective help.</p>
        <p><b>Exit</b>: Terminates UltraGrav2.</p>

        <p><u>Error Log File</u>: The application\'s error log file is located on the SD card, in following location:<br>
        <i>&lt;sdcard&gt;/Android/data/com.zlscorp.ultrgrav/files/errors.log</i>.</p>

        <p><b>Single Observation Mode Help</b><br>
        The Single Observation Mode makes a single observation at a station. The following is a description 
        of the fields on the Single Observation Mode screen.</p> 
        <p><u>Elapsed Time</u>: Elapsed time in Seconds.</p>
        <p><u>Duty Cycle</u>: The current feedback force in \%% duty cycle. Zero and 100\%% represent the 
        minimum and maximum feedback force.</p>
        <p><u>Dial Reading</u>: The actual dial reading uncorrected for scale factor.</p>
        <p><u>Observed Gravity</u>: This equals the Corrected Dial + Feedback Correction + Level Correction +
        Temperature Correction + Earth Tide Correction (when enabled).</p>
        <p><u>Standard Deviation</u>: The standard deviation (SD) of the current observation. An observation 
        is made at five second intervals.</p> 
        <p><u>Beam Error</u>: The displacement of the gravimeter beam from Null in mGal. This field is updated 
        at 5 second intervals.</p>
        <p><u>Feedback Correction</u>: The magnitude of the feedback force in mGal.</p>
        <p><u>Earth Tide Correction</u>: The magnitude of the Earth Tide Correction in mGal.</p>
        <p><u>Level Correction</u>: The magnitude of the correction for leveling errors in mGal.</p>
        <p><u>Temp. Correction</u>: The magnitude of the temperature correction in mGal.</p>
        <p><u>Time</u>: Time of a valid observation.</p>
        <p><u>Warning messages</u>:<br>
        The meter is off level: This indicates that the meter is further off level than the 
        electronics can accommodate for.</p>
        <p>Bad Temperature xxx: This indicates that the meter is out of its allowable temperature range.</p>

        <p>A valid observation is obtained when the Standard Deviation and Beam Error are both equal 
        to or less than the precision set in System Parameters. If the desired precision is not achieved 
        within 180 sec, a valid observation is forced.  The usual reason for a time-out is that the site 
        is too noisy to obtain the desired precision. You can either decrease the precision (larger number) 
        or decrease the feedback gain (smaller number) in the system parameters settings. Other methods to 
        cope with a noisy site are detailed in the manual.</p>

        <p>Factors affecting Single Observation Mode:<br>
        1) The Precision setting in System Parameters. The higher the precision (smaller number) the 
        longer will be required to obtain a valid observation.</p>
        <p>2) The Feedback Gain setting in System Parameters. A lower gain results in greater beam noise, 
        smoother Feedback Correction, and increased  time constant of the feedback loop. This setting is 
        a compromise and its use requires experience.</p>
        <p>3) If Latitude and Longitude are BOTH zero or blank the Earth Tide Correction will be zero. 
        A zero Latitude will disable the calculated dial preset in the Hunt procedure.</p>
        <p>4) Enable Earth Tide checkbox in Station Parameters, when checked, causes the Earth Tide 
        Correction to be included in OBSG (observed gravity).</p>
        <p>5) The Android system clock must be set to GMT for a correct Earth Tide calculation.</p>
        
        <p><b>Continuous Observation Mode Help</b><br>
        Continuous Observation Mode makes continuous observations at a station for the purpose of observing 
        earth tides or secular studies. The following is a description of the fields on the Continuous 
        Observation Mode screen.</p>
        <p><u>Elapsed Time</u>: Elapsed time in Seconds.</p>
        <p><u>Duty Cycle</u>: The current feedback force in \%% duty cycle. Zero and 100\%% represent the 
        minimum and maximum feedback force.</p>
        <p><u>Dial Reading</u>: The actual dial reading uncorrected for scale factor.</p>
        <p><u>Observed Gravity</u>: This equals the Corrected Dial + Filtered Feedback Correction + Level 
        Correction + Temperature Correction.</p>
        <p><u>Feedback Correction</u>: The magnitude of the feedback force in mGal.</p>
        <p><u>Earth Tide</u>: The magnitude of the Earth Tide in mGal.</p>
        <p><u>Level Correction</u>: The magnitude of the correction for level errors in mGal.</p>
        <p><u>Temp Correction</u>: The magnitude of the temperature correction in mGal.</p>
        <p><u>Data Output Rate</u>: Displays the value entered in the Continuous Observation Setup screen.</p>
        <p><u>Filter Time Constant</u>: Displays the value entered in the Continuous Observation Setup screen.</p>
        <p><u>Time</u>: Time of an observation.</p>

        <p>Observations are made continuously at one sec intervals, and the screen and data file are updated 
        at intervals specified in the Data Output Rate, which is set in the Continuous Observation Parameters 
        screen. The data is also filtered with a cascaded 3 stage filter, whose time constant is also set 
        in the Continuous Observation Parameters screen.</p>

        <p>Factors affecting Continuous Observation Mode:<br>
        1) Data Output Rate and Filter Time Constant in Continuous Observation Parameters. These must be 
        chosen to satisfy the Nyquist Criterion to prevent aliasing.  Choose values such that Data Output Rate 
        is at least twice the Filter Time Constant. The Continuous Observation Parameter screen 
        is presented before initiating the Continuous Observation procedure.</p>
        <p>2) The Feedback Gain setting in System Parameters. A lower gain results in greater beam noise, 
        smoother Feedback Correction, and increased time constant of the feedback loop. This setting is a 
        compromise and its use requires experience. Decreasing the feedback gain has an effect similar to 
        increasing the filter time constant.</p>
        <p>3) If Latitude and Longitude are BOTH zero or blank the Earth Tide Correction will be zero.</p>
        <p>4) The Android system clock must be set to GMT for correct Earth Tide Calculations.</p>]]></string>
    <string name="DialReadingActivity"><![CDATA[<p><b>Dial Reading Help</b></p>
        <p>Follow the instructions on the Dial Reading screen.</p>]]></string>
    <string name="ContinousSetupActivity"><![CDATA[<p><b>Continuous Observation Setup Help</b></p>
        <p><u>Data Output Rate</u>: Sets the rate at which data are archived and the screen is updated.</p>
        <p><u>Filter Time Constant</u>: Sets the time constant of a three stage RC filter in seconds.</p>
        <p>Data Output Rate and Filter Time Constant must be chosen to satisfy the Nyquist Criterion 
        to prevent aliasing.  Choose values such that the Data Output Rate is at least twice the Filter Time Constant.
        </p>]]></string>
    <string name="NoteActivity"><![CDATA[<p><b>Note Help</b></p>
        <p>Enter your observation notes on this screen. They will be included with the observation data 
        when it is exported to the SD card.</p>]]></string>
    <string name="company_name">ZLS Corp.</string>
    <string name="zls_logo">ZLS Logo</string>
    <string name="company_loc1">Developed and Manufactured in</string>
    <string name="company_loc2">Austin, Texas, USA</string>
    <string name="temp_title">Temp:</string>
    <string name="battery_title">Battery:</string>
    <string name="single_obs">Single\nObservation</string>
    <string name="continuous_obs">Continuous\nObservation</string>
    <string name="settings">Settings</string>
    <string name="meter_setup">Meter Setup</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="accept">Accept</string>
    <string name="duty_cycle">Duty Cycle (%)</string>
    <string name="station_id">Station ID</string>
    <string name="observer_id">Observer ID</string>
    <string name="latitude">Latitude\nN(+)/S(-)</string>
    <string name="longitude">Longitude\nE(+)/W(-)</string>
    <string name="elevation">Elevation\n(meters)</string>
    <string name="meter_height">Meter Height (meters)</string>
    <string name="obtain_gps">Obtain Lat/Long from GPS</string>
    <string name="enable_earthtide">Enable Earth Tide</string>
    <string name="beam_scale">Beam Scale</string>
    <string name="data_file_sizes">Data File Sizes (Records)</string>
    <string name="single">Single</string>
    <string name="continuous">Continuous</string>
    <string name="record_count">Record Count</string>
    <string name="save_single_mode">Save Single Mode Data File</string>
    <string name="save_continuous_mode_short">Save Short Continuous Mode Data File</string>
    <string name="save_continuous_mode_long">Save Long Continuous Mode Data File</string>
    <string name="delete_single_mode">Delete Single Mode Data File</string>
    <string name="delete_continuous_mode">Delete Continuous Mode Data File</string>
    <string name="no_calib_Table_title">Calibration Table Not Loaded</string>
    <string name="start_reading">Start Reading</string>
    <string name="duty_cycle_presets">Duty Cycle Presets</string>
    <string name="beam_frequency">Beam Frequency</string>
    <string name="duty_value_preset_10_percent">10%</string>
    <string name="duty_value_preset_50_percent">50%</string>
    <string name="duty_value_preset_90_percent">90%</string>
    <string name="base_dial_reading">Base Dial Reading</string>
    <string name="base_dr_minus_250">Base DR -.250 mGal</string>
    <string name="base_dr_plus_250">Base DR +.250 mGal</string>
    <string name="minus_250_beam_freq">-0.250 Beam Freq</string>
    <string name="plus_250_beam_freq">+0.250 Beam Freq</string>
    <string name="delta_freq">Delta Freq</string>
    <string name="beam_scale_accept_button_prompt">Tap the Accept button to save the Beam Scale value.</string>
</resources>