<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:layout_width="match_parent" -->
<!--     android:layout_height="match_parent" -->
<!--     android:layout_weight="4" > -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            style="@style/SettingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_file_sizes" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/LabelColumnLeft"
                android:text="@string/single" />

            <TextView
                android:id="@+id/singleSize"
                style="@style/LabelColumnRight"
                android:text="@string/record_count" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/LabelColumnLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/continuous" />

            <TextView
                android:id="@+id/continuousSize"
                style="@style/LabelColumnRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/record_count" />
        </LinearLayout>

        <Button
            android:id="@+id/saveSingleModeButton"
            style="@style/AppButton2A"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/save_single_mode" />
<!--  
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/saveContinuousModeShortButton"
                style="@style/AppButton2"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/save_continuous_mode_short" />
            <Button
                android:id="@+id/saveContinuousModeLongButton"
                style="@style/AppButton2"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/save_continuous_mode_long" />
        </LinearLayout>
        <Button
            android:id="@+id/deleteSingleModeButton"
            style="@style/AppButton2A"
            android:layout_width="fill_parent"
            android:layout_margin="5dp"
            android:text="@string/delete_single_mode" />

        <Button
            android:id="@+id/deleteContinuousModeButton"
            style="@style/AppButton2A"
            android:layout_width="fill_parent"
            android:text="@string/delete_continuous_mode" />
    </LinearLayout>

<!-- </ScrollView> -->